fix gap in lists

--- a/css/styles.css
+++ b/css/styles.css
@@ -239,7 +239,7 @@ main {              /* Крок 2. Притискаємо футер вниз */
 .portfolio-list {
     display: flex;
     flex-wrap: wrap;
-    column-gap: 24px;
+    gap: 24px;
 }
 /* #endregion */
 
